--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-uglify": "~0.2.7",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-copy": "~0.5.0"
+    "grunt-contrib-copy": "~0.5.0",
+    "express": "~3.4.7",
+    "connect": "~2.12.0",
+    "ejs": "~0.8.5",
+    "jade": "~1.1.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
