--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "express": "~3.4.7",
     "connect": "~2.12.0",
     "ejs": "~0.8.5",
-    "jade": "~1.1.4"
+    "jade": "~1.1.4",
+    "grunt-contrib-jade": "~0.9.1",
+    "grunt-rev": "~0.1.0",
+    "grunt-usemin": "~2.0.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
