--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "jade": "~1.1.4",
     "grunt-contrib-jade": "~0.9.1",
     "grunt-rev": "~0.1.0",
-    "grunt-usemin": "~2.0.2"
+    "grunt-usemin": "~2.0.2",
+    "grunt-contrib-htmlmin": "~0.1.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
